force-app/main/default/objects/RTV_Order__c/RTV_Order__c.object-meta.xml
<CustomObject>
    <description>Return Order record for one Sold-to &amp; Ship-to</description>
    <label>RTV Order</label>
    <nameField>
        <label>Order Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>