force-app/main/default/objects/RTV_Order__c/fields/AC_Boxes__c.field-meta.xml
<CustomField>
    <fullName>AC_Boxes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>AC箱数</description>
    <label>AC Boxes</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>