force-app/main/default/objects/RTV_Order__c/fields/Actual_Amount_inV__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_inV__c</fullName>
    <label>Actual Amount (CNY/incl.VAT)</label>
    <summarizedField>RTV_Order_Item__c.Actual_Amount_inV__c</summarizedField>
    <summaryForeignKey>RTV_Order_Item__c.RTV_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>