force-app/main/default/objects/RTV_Order__c/fields/Actual_Date_Of_WSL_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_WSL_Confirmed__c</fullName>
    <label>Actual Date Of WSL Confirmed</label>
    <type>Date</type>
</CustomField>