force-app/main/default/objects/RTV_Order__c/fields/Actual_Date_Of_WSL_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_WSL_Inbound__c</fullName>
    <label>Actual Date Of TB To DEF</label>
    <type>Date</type>
</CustomField>