force-app/main/default/objects/RTV_Order__c/fields/AP_Boxes__c.field-meta.xml
<CustomField>
    <fullName>AP_Boxes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>AP箱数</description>
    <label>AP Boxes</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>