force-app/main/default/objects/RTV_Order__c/fields/Application_QTY__c.field-meta.xml
<CustomField>
    <fullName>Application_QTY__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total qty of customer applications</description>
    <inlineHelpText>Total qty of customer applications</inlineHelpText>
    <label>Application QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>