force-app/main/default/objects/RTV_Order__c/fields/Application_QTY_FW__c.field-meta.xml
<CustomField>
    <fullName>Application_QTY_FW__c</fullName>
    <description>FW的申请数量</description>
    <inlineHelpText>FW的申请数量</inlineHelpText>
    <label>Application QTY (FW)</label>
    <summarizedField>RTV_Order_Item__c.Application_QTY__c</summarizedField>
    <summaryFilterItems>
        <field>RTV_Order_Item__c.BU_2__c</field>
        <operation>equals</operation>
        <value>FW</value>
    </summaryFilterItems>
    <summaryForeignKey>RTV_Order_Item__c.RTV_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>