force-app/main/default/objects/RTV_Order__c/fields/CS_Confirm__c.field-meta.xml
<CustomField>
    <fullName>CS_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for def summary kpi</description>
    <label>CS Confirm</label>
    <type>Checkbox</type>
</CustomField>