force-app/main/default/objects/RTV_Order__c/fields/Default_ShipTo_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Default_ShipTo_OwnerId__c</fullName>
    <formula>Ship_To__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default ShipTo OwnerId</label>
    <type>Text</type>
</CustomField>