force-app/main/default/objects/RTV_Order__c/fields/DTC_Type__c.field-meta.xml
<CustomField>
    <fullName>DTC_Type__c</fullName>
    <formula>IF(Return_Summary__r.DTC_Type__c==&apos;CFS&apos;     || ISPICKVAL(RTV_DEF_Summary__r.DTC_Type__c, &apos;CFS&apos;), &apos;CFS&apos;,
IF(Return_Summary__r.DTC_Type__c==&apos;Digital&apos; || ISPICKVAL(RTV_DEF_Summary__r.DTC_Type__c, &apos;DIG&apos;), &apos;Digital&apos;,
&apos;&apos;))</formula>
    <label>DTC Type</label>
    <type>Text</type>
</CustomField>