force-app/main/default/objects/RTV_Order__c/fields/External_State__c.field-meta.xml
<CustomField>
    <fullName>External_State__c</fullName>
    <description>LF运输状态</description>
    <label>External State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not</fullName>
                <default>true</default>
                <label>Not</label>
            </value>
            <value>
                <fullName>Notified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>