force-app/main/default/objects/RTV_Order__c/fields/From_TakeBack_Order__c.field-meta.xml
<CustomField>
    <fullName>From_TakeBack_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From TakeBack Order</label>
    <referenceTo>RTV_Order__c</referenceTo>
    <relationshipLabel>To DEF Orders</relationshipLabel>
    <relationshipName>To_DEF_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>