force-app/main/default/objects/RTV_Order__c/fields/FW_Boxes__c.field-meta.xml
<CustomField>
    <fullName>FW_Boxes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FW Boxes</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>