force-app/main/default/objects/RTV_Order__c/fields/Have_Read_Delivery_Report__c.field-meta.xml
<CustomField>
    <fullName>Have_Read_Delivery_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Read Delivery Report</label>
    <type>Checkbox</type>
</CustomField>