force-app/main/default/objects/RTV_Order__c/fields/Inbound_Amount__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Amount__c</fullName>
    <formula>IF(Inspect_Amount_A__c &gt;=0, Inspect_Amount_A__c, 0) +
IF(Inspect_Amount_B__c &gt;=0, Inspect_Amount_B__c, 0) +
IF(Inspect_Amount_D__c &gt;=0, Inspect_Amount_D__c, 0)</formula>
    <label>Actual Amount (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>