force-app/main/default/objects/RTV_Order__c/fields/Inbound_QTY__c.field-meta.xml
<CustomField>
    <fullName>Inbound_QTY__c</fullName>
    <label>Inbound QTY</label>
    <summarizedField>RTV_Order_Item__c.Inbound_QTY__c</summarizedField>
    <summaryForeignKey>RTV_Order_Item__c.RTV_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>