force-app/main/default/objects/RTV_Order__c/fields/Insp_CS_Approve_Time__c.field-meta.xml
<CustomField>
    <fullName>Insp_CS_Approve_Time__c</fullName>
    <label>Insp CS Approve Time</label>
    <type>DateTime</type>
</CustomField>