force-app/main/default/objects/RTV_Order__c/fields/Insp_CS_Approved__c.field-meta.xml
<CustomField>
    <fullName>Insp_CS_Approved__c</fullName>
    <formula>IF(ISNULL(Insp_CS_Approve_Time__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insp CS Approved</label>
    <type>Checkbox</type>
</CustomField>