force-app/main/default/objects/RTV_Order__c/fields/Inspect_Amount_B__c.field-meta.xml
<CustomField>
    <fullName>Inspect_Amount_B__c</fullName>
    <label>Inspect Amount B (CNY/excl.VAT)</label>
    <summarizedField>RTV_Order_Item__c.Inspect_Amount_B__c</summarizedField>
    <summaryForeignKey>RTV_Order_Item__c.RTV_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>