force-app/main/default/objects/RTV_Order__c/fields/Inspect_By__c.field-meta.xml
<CustomField>
    <fullName>Inspect_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspect By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RTV_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>