force-app/main/default/objects/RTV_Order__c/fields/Inspect_D_to_Defective__c.field-meta.xml
<CustomField>
    <fullName>Inspect_D_to_Defective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Transfer Inspection (D) of Takeback  to Defective process.</description>
    <inlineHelpText>Transfer Inspection (D) of Takeback  to Defective process.</inlineHelpText>
    <label>Inspect(D) to Defective</label>
    <referenceTo>RTV_Defective__c</referenceTo>
    <relationshipLabel>RTV Orders (Inspect(D) to Defective)</relationshipLabel>
    <relationshipName>From_Takeback_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>