force-app/main/default/objects/RTV_Order__c/fields/Inspect_QTY_C__c.field-meta.xml
<CustomField>
    <fullName>Inspect_QTY_C__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Inspection qty (Reason Code C)</description>
    <inlineHelpText>Inspection qty (Reason Code C)</inlineHelpText>
    <label>Inspect QTY C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>