force-app/main/default/objects/RTV_Order__c/fields/IsDTC__c.field-meta.xml
<CustomField>
    <fullName>IsDTC__c</fullName>
    <formula>ISPICKVAL(Order_Type__c, &apos;CFS DTC Takeback&apos;) || 
ISPICKVAL(Order_Type__c, &apos;Digital DTC Takeback&apos;) || 
ISPICKVAL(Order_Type__c, &apos;CFS DTC Defective&apos;) || 
ISPICKVAL(Order_Type__c, &apos;Digital DTC Defective&apos;)</formula>
    <label>IsDTC</label>
    <type>Checkbox</type>
</CustomField>