force-app/main/default/objects/RTV_Order__c/fields/Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Item_Count__c</fullName>
    <inlineHelpText>明细行数</inlineHelpText>
    <label>Item Count</label>
    <summaryForeignKey>RTV_Order_Item__c.RTV_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>