force-app/main/default/objects/RTV_Order__c/fields/Items_Without_DEF_Reason__c.field-meta.xml
<CustomField>
    <fullName>Items_Without_DEF_Reason__c</fullName>
    <description>缺少退残原因的明细数量</description>
    <inlineHelpText>缺少退残原因的明细数量</inlineHelpText>
    <label>Items Without DEF Reason</label>
    <summaryFilterItems>
        <field>RTV_Order_Item__c.Defective_Reason__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>RTV_Order_Item__c.RTV_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>