force-app/main/default/objects/RTV_Order__c/fields/MSRP_CNY_incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>MSRP_CNY_incl_VAT__c</fullName>
    <label>MSRP (CNY/incl.VAT)</label>
    <summarizedField>RTV_Order_Item__c.msrp_formula__c</summarizedField>
    <summaryForeignKey>RTV_Order_Item__c.RTV_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>