force-app/main/default/objects/RTV_Order__c/fields/Not_Found_Count__c.field-meta.xml
<CustomField>
    <fullName>Not_Found_Count__c</fullName>
    <label>Not Found Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>