force-app/main/default/objects/RTV_Order__c/fields/Off_Policy__c.field-meta.xml
<CustomField>
    <fullName>Off_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEF Off Policy(ACAP)</label>
    <type>Checkbox</type>
</CustomField>