force-app/main/default/objects/RTV_Order__c/fields/Off_Policy_FW__c.field-meta.xml
<CustomField>
    <fullName>Off_Policy_FW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEF Off Policy(FW)</label>
    <type>Checkbox</type>
</CustomField>