force-app/main/default/objects/RTV_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>WSL Takeback OR DTC Takeback</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WSL Takeback</fullName>
                <default>true</default>
                <label>WSL Takeback</label>
            </value>
            <value>
                <fullName>RTV Defective</fullName>
            </value>
            <value>
                <fullName>CFS DTC Takeback</fullName>
            </value>
            <value>
                <fullName>Digital DTC Takeback</fullName>
            </value>
            <value>
                <fullName>CFS DTC Defective</fullName>
            </value>
            <value>
                <fullName>Digital DTC Defective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>