force-app/main/default/objects/RTV_Order__c/fields/OrderPTLF__c.field-meta.xml
<CustomField>
    <fullName>OrderPTLF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OrderPTLF</label>
    <type>Checkbox</type>
</CustomField>