force-app/main/default/objects/RTV_Order__c/fields/POS_Transfer_Order_No__c.field-meta.xml
<CustomField>
    <fullName>POS_Transfer_Order_No__c</fullName>
    <description>POS机的调拨单号</description>
    <inlineHelpText>POS机的调拨单号</inlineHelpText>
    <label>POS Transfer Order No</label>
    <length>200</length>
    <type>Text</type>
</CustomField>