force-app/main/default/objects/RTV_Order__c/fields/POS_Transfer_Time__c.field-meta.xml
<CustomField>
    <fullName>POS_Transfer_Time__c</fullName>
    <description>POS机的调拨时间</description>
    <inlineHelpText>POS机的调拨时间</inlineHelpText>
    <label>POS Transfer Time</label>
    <type>DateTime</type>
</CustomField>