force-app/main/default/objects/RTV_Order__c/fields/Return_Summary__c.field-meta.xml
<CustomField>
    <fullName>Return_Summary__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>As the detail of return summary</description>
    <label>Return Summary</label>
    <referenceTo>RTV_Summary__c</referenceTo>
    <relationshipLabel>RTV Orders</relationshipLabel>
    <relationshipName>RTV_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>