force-app/main/default/objects/RTV_Order__c/fields/RTV_Baozun_Seeding__c.field-meta.xml
<CustomField>
    <fullName>RTV_Baozun_Seeding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RTV Baozun Seeding</label>
    <referenceTo>RTV_BaoZun_Seeding__c</referenceTo>
    <relationshipLabel>RTV Orders</relationshipLabel>
    <relationshipName>RTV_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>