force-app/main/default/objects/RTV_Order__c/fields/RTV_DEF_Summary__c.field-meta.xml
<CustomField>
    <fullName>RTV_DEF_Summary__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>RTV DEF Summary</label>
    <referenceTo>RTV_DEF_Summary__c</referenceTo>
    <relationshipLabel>RTV Orders</relationshipLabel>
    <relationshipName>RTV_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>