force-app/main/default/objects/RTV_Order__c/fields/RTV_Defective__c.field-meta.xml
<CustomField>
    <fullName>RTV_Defective__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>RTV Defective(AC/AP)</label>
    <referenceTo>RTV_Defective__c</referenceTo>
    <relationshipLabel>RTV Orders(AC/AP)</relationshipLabel>
    <relationshipName>RTV_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>