force-app/main/default/objects/RTV_Order__c/fields/RTV_Defective_FW__c.field-meta.xml
<CustomField>
    <fullName>RTV_Defective_FW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RTV Defective(FW)</label>
    <referenceTo>RTV_Defective__c</referenceTo>
    <relationshipLabel>RTV Orders(FW)</relationshipLabel>
    <relationshipName>RTV_Orders_FTW</relationshipName>
    <type>Lookup</type>
</CustomField>