force-app/main/default/objects/RTV_Order__c/fields/Seeding_Status__c.field-meta.xml
<CustomField>
    <fullName>Seeding_Status__c</fullName>
    <label>Seeding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POST to LF</fullName>
                <default>true</default>
                <label>POST to LF</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>