force-app/main/default/objects/RTV_Order__c/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <inlineHelpText>Please check if the address is right. 
If wrong, please correct it.</inlineHelpText>
    <label>Ship-To Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>