force-app/main/default/objects/RTV_Order__c/fields/Ship_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Contact__c</fullName>
    <label>Ship-To Contact</label>
    <length>40</length>
    <type>Text</type>
</CustomField>