force-app/main/default/objects/RTV_Order__c/fields/Ship_To_Out_Emails_Status__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Out_Emails_Status__c</fullName>
    <inlineHelpText>Ship-To外部邮件的发送结果</inlineHelpText>
    <label>Ship-To Out Emails Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
                <color>#33FF33</color>
                <label>Sent</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <color>#CC0000</color>
                <label>Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>