force-app/main/default/objects/RTV_Order__c/fields/Ship_To_Outbound_Emails__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Outbound_Emails__c</fullName>
    <inlineHelpText>请输入Ship-To外部Email地址（逗号分割的1~5个地址）</inlineHelpText>
    <label>Ship-To Outbound Emails</label>
    <type>TextArea</type>
</CustomField>