force-app/main/default/objects/RTV_Order__c/fields/Ship_To_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Phone1__c</fullName>
    <label>Ship-To Phone1</label>
    <type>Phone</type>
</CustomField>