force-app/main/default/objects/RTV_Order__c/fields/Ship_To_Phone2__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Phone2__c</fullName>
    <label>Ship-To Phone2</label>
    <type>Phone</type>
</CustomField>