force-app/main/default/objects/RTV_Order__c/fields/ShipTo_Or_Store_Code__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Or_Store_Code__c</fullName>
    <formula>IF(DTC_Type__c==&apos;CFS&apos;, Ship_To__r.DTC_Code__c,
IF(DTC_Type__c==&apos;Digital&apos;, Ship_To__r.Name,
&apos;&apos;))</formula>
    <label>Ship-To / Store Code</label>
    <type>Text</type>
</CustomField>