force-app/main/default/objects/RTV_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Order Detail Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
                <default>true</default>
                <label>Ready</label>
            </value>
            <value>
                <fullName>POST to LF</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Inspected</fullName>
            </value>
            <value>
                <fullName>Insp Wait Approval</fullName>
            </value>
            <value>
                <fullName>Insp Confirmed</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>