force-app/main/default/objects/RTV_Order__c/fields/Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Code__c</fullName>
    <formula>Ship_To__r.DTC_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Code</label>
    <type>Text</type>
</CustomField>