force-app/main/default/objects/RTV_Order__c/fields/Takeback_NET__c.field-meta.xml
<CustomField>
    <fullName>Takeback_NET__c</fullName>
    <formula>Inbound_Amount__c / $Setup.ConverseRMS__c.ExRate__c</formula>
    <label>Actual Amount (USD/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>