force-app/main/default/objects/RTV_Order__c/fields/Takeback_NET_A__c.field-meta.xml
<CustomField>
    <fullName>Takeback_NET_A__c</fullName>
    <formula>Inspect_Amount_A__c /$Setup.ConverseRMS__c.ExRate__c</formula>
    <label>Inspect Amount (A)(USD/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>