force-app/main/default/objects/RTV_Order__c/fields/TBD_Count__c.field-meta.xml
<CustomField>
    <fullName>TBD_Count__c</fullName>
    <description>异常Item数量</description>
    <label>T.B.D Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>