force-app/main/default/objects/RTV_Order__c/fields/To_DEF_Order__c.field-meta.xml
<CustomField>
    <fullName>To_DEF_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To DEF Order</label>
    <referenceTo>RTV_Order__c</referenceTo>
    <relationshipLabel>From Takeback Orders</relationshipLabel>
    <relationshipName>From_TakeBack_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>